	PR java/24938: 	* sources.am, Makefile.in: Rebuilt. 	* gnu/CORBA/DynAn/gnuDynValue.java: Removed. 	* gnu/CORBA/DynAn/RecordAny.java: Removed. 	* gnu/CORBA/DynAn/RecordAny.h: Rebuilt.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/gcj@119593 138bc75d-0d04-0410-961f-82ee72b054a4